--- a/package.json
+++ b/package.json
@@ -9,9 +9,24 @@
     "doc": "docs"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "webpack": "^4.28.2",
+    "webpack-cli": "^3.1.2",
+    "css-loader": "^2.1.0",
+    "style-loader": "^0.23.1",
     "browser-sync": "^2.26.3"
   },
   "scripts": {
-    "start": "browser-sync docs -w"
+    "start": "browser-sync docs -w",
+    "watch": "webpack --watch --mode development",
+    "build": "webpack --mode production"
   }
 }
