--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "directories": {
     "doc": "docs"
   },
+  "dependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
@@ -16,17 +20,18 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "copy-webpack-plugin": "^4.6.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
     "webpack": "^4.28.2",
     "webpack-cli": "^3.1.2",
     "css-loader": "^2.1.0",
     "style-loader": "^0.23.1",
-    "browser-sync": "^2.26.3"
+    "browser-sync": "^2.26.3",
+    "rimraf": "^2.6.3",
+    "cross-env": "^5.2.0"
   },
   "scripts": {
     "start": "browser-sync docs -w",
+    "clean": "rimraf ./docs/*",
     "watch": "webpack --watch --mode development",
-    "build": "webpack --mode production"
+    "build": "yarn run clean && cross-env NODE_ENV=production webpack --mode production"
   }
 }
