--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,13 @@ branches:
   - master
 script:
   - yarn build
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  target-branch: gh-pages
+  local-dir: docs
+  on:
+    branch: master
