--- a/.editorconfig
+++ b/.editorconfig
@@ -6,10 +6,14 @@ root = true
 # Unix-style newlines with a newline ending every file
 [*]
 end_of_line = lf
-insert_final_newline = true
 indent_size = 2
 indent_style = space
 charset = utf-8
 
-[*.{js,html,json}]
+[*.{js,html,ts,jsx}]
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+[*.{json}]
+insert_final_newline = false
 trim_trailing_whitespace = true
