--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "env": {
-      "browser": true,
-      "es6": true
+    "browser": true,
+    "es6": true
   },
   "plugins": [
     "react"
@@ -16,7 +16,7 @@
     }
   },
   "parserOptions": {
-      "ecmaVersion": 7,
+      "ecmaVersion": 2018,
       "sourceType": "module",
       "jsx": true
   },
@@ -24,6 +24,7 @@
     "quotes": [
       "error",
       "single"
-    ]
+    ],
+    "react/prop-types": "off"
   }
 }
