chore(build): add typescript support via react-create-app

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ deploy:
   github-token: $GITHUB_TOKEN
   keep-history: false
   target-branch: gh-pages
-  local-dir: docs
+  local-dir: build
   on:
     branch: master
