--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "zalando-tech-radar",
   "version": "2019.1.1",
   "description": "Visualizing our technology choices",
-  "homepage": "https://github.com/yaneek/tech-radar",
+  "homepage": "/tech-radar",
   "repository": "https://github.com/yaneek/tech-radar.git",
   "license": "MIT",
+  "private": true,
   "directories": {
     "doc": "docs"
   },
@@ -15,28 +16,23 @@
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "browser-sync": "^2.26.3",
-    "copy-webpack-plugin": "^4.6.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
+    "@types/react": "^16.7.22",
     "eslint": "^5.12.1",
     "eslint-plugin-react": "^7.12.4",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "rimraf": "^2.6.3",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.28.2",
-    "webpack-cli": "^3.1.2"
+    "react-scripts": "2.1.3",
+    "typescript": "^3.2.4"
   },
   "scripts": {
-    "start": "browser-sync docs -w",
-    "clean": "rimraf ./docs/*",
-    "watch": "webpack --watch --mode development",
-    "build": "yarn run clean && cross-env NODE_ENV=production webpack --mode production",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "lint:js": "eslint src/**/*.{js,jsx}"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
