--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "devDependencies": {
     "@types/react": "^16.7.22",
+    "babel-polyfill": "^6.26.0",
     "eslint-plugin-react": "^7.12.4",
+    "react-app-polyfill": "^0.2.0",
     "react-scripts": "2.1.3",
     "typescript": "^3.2.4"
   },
