--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.7.22",
+    "@types/react-dom": "^16.0.11",
     "babel-polyfill": "^6.26.0",
     "eslint-plugin-react": "^7.12.4",
     "react-app-polyfill": "^0.2.0",
