--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.7.0"
   },
   "devDependencies": {
+    "@types/d3": "^5.7.0",
     "@types/react": "^16.7.22",
     "@types/react-dom": "^16.0.11",
     "babel-polyfill": "^6.26.0",
