--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ indent_size = 2
 indent_style = space
 charset = utf-8
 
-[*.{js,html,ts,jsx}]
+[*.{js,html,ts,jsx,tsx}]
 trim_trailing_whitespace = true
 insert_final_newline = true
 
