--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "doc": "docs"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.0",
-    "d3": "^5.7.0",
+    "@material-ui/core": "^4.8.3",
+    "d3": "^5.15.0",
     "lodash.intersection": "^4.4.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@types/d3": "^5.7.0",
-    "@types/lodash.intersection": "^4.4.4",
-    "@types/react": "^16.7.22",
-    "@types/react-dom": "^16.0.11",
+    "@types/d3": "^5.7.2",
+    "@types/lodash.intersection": "^4.4.6",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "babel-polyfill": "^6.26.0",
-    "eslint-plugin-react": "^7.12.4",
-    "react-app-polyfill": "^0.2.0",
-    "react-scripts": "2.1.3",
-    "typescript": "^3.2.4"
+    "eslint-plugin-react": "^7.17.0",
+    "react-app-polyfill": "^1.0.5",
+    "react-scripts": "^3.3.0",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
