chore(node): configure node version via .nvmrc file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
-node_js:
-  - "lts/*"
+# read node version from .nvmrc
+# node_js:
+#   - "lts/*"
 cache: yarn
 branches:
   only:
