--- a/package.json
+++ b/package.json
@@ -13,19 +13,14 @@
     "@material-ui/core": "^4.8.3",
     "d3": "^5.15.0",
     "lodash.intersection": "^4.4.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
     "@types/lodash.intersection": "^4.4.6",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "babel-polyfill": "^6.26.0",
-    "eslint-plugin-react": "^7.17.0",
-    "react-app-polyfill": "^1.0.5",
-    "react-scripts": "^3.3.0",
-    "typescript": "^3.7.4"
+    "react-scripts": "4.0.2",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -35,10 +30,22 @@
     "lint": "yarn lint:js",
     "lint:js": "eslint src/**/*.{js,jsx}"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 10",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
