--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/d3": "^5.7.2",
     "@types/lodash.intersection": "^4.4.6",
+    "gh-pages": "^3.1.0",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.3"
   },
@@ -27,6 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "PUBLIC_URL=https://yaneek.github.io/tech-radar/ gh-pages -d build",
     "lint": "yarn lint:js",
     "lint:js": "eslint src/**/*.{ts,tsx}"
   },
