chore: bump nodejs version + use volta configuration

--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "volta": {
+    "node": "16.20.1",
+    "yarn": "1.22.22"
   }
 }
