--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@material-ui/core": "^4.8.3",
     "d3": "^5.15.0",
     "lodash.intersection": "^4.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/d3": "^5.7.2",
     "@types/lodash.intersection": "^4.4.6",
     "gh-pages": "^3.1.0",
-    "react-scripts": "4.0.2",
-    "typescript": "^4.1.3"
+    "react-scripts": "5.0.1",
+    "typescript": "5.6.3"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -52,7 +52,7 @@
     ]
   },
   "volta": {
-    "node": "16.20.1",
+    "node": "20.17.0",
     "yarn": "1.22.22"
   }
 }
